--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "typescript",
-  "version": "0.0.0",
+  "name": "typescript-todolist",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {}
 }
